make sure, that overflow-x scroll bar is hidden

--- a/charts/climate_undershoot_carbon/climate_undershoot_carbon.css
+++ b/charts/climate_undershoot_carbon/climate_undershoot_carbon.css
@@ -4,8 +4,10 @@
   border-radius: 3px;
 }
 #chart-climate_undershoot_carbon .chart-box-inner {
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 #chart-modal-box {
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
