--- a/charts/planet_boundaries_donut/planet_boundaries_donut.css
+++ b/charts/planet_boundaries_donut/planet_boundaries_donut.css
@@ -36,7 +36,8 @@
 #chart-canvas-planet_boundaries_donut-charts {
   display: flex;
   flex-direction: row;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
   max-width: 100%;
   max-height: 100%;
   height: 100%;
